# llm-design-patterns

./: README.md  pyproject.toml
evals/using_pytest/: README.md  conftest.py  pyproject.toml  test_example_llm_eval.py
evals/using_pytest/test_evals/: conftest.py  test_example_llm_eval_1.py
llm_client/: cost_tracking_llm_client.py
memory/chatbot_memory_visualiser/: README.md  main.py  pyproject.toml  temp_explore.py
memory/chatbot_memory_visualiser/app/interfaces/: memory_alg_protocol.py
memory/chatbot_memory_visualiser/app/lifecycle/: teardown.py
memory/chatbot_memory_visualiser/app/memory_algs/: __init__.py  full_chat_history.py  knowledge_graph.py  no_memory.py  recursive_summarisation.py  sliding_window.py  store_full_chat_history.py  vector_memory.py
model_context_protocol/custom_mcp_server/: README.md  pyproject.toml
model_context_protocol/custom_mcp_server/src/custom_mcp_server/: main.py  server_setup.py
model_context_protocol/custom_mcp_server/src/custom_mcp_server/tools/: __init__.py  generate_abstract_poem.py  roll_dice.py
multimodal/: image_input.py
parallel_processing/: async.py
pdf_question_answering/: pyproject.toml  using_page_images_app.py  vibe.py
pdf_to_text/: docling_pdf_to_text.py  pyproject.toml
prompt_chaining/: step_back_prompting_example.py
rag/: chonkie_visualiser_app.py  local_embed_local_vector_db.py  pyproject.toml
structured_output/: pydantic_schema_dump_retry.py
structured_outputs/: pydantic_schema_dump_retry.py  pyproject.toml
tool_use/: function_calling.py  pyproject.toml
tool_use/tools/web_browser/: README.md  __init__.py  pyproject.toml  web_browser.py
tool_use/tools/web_browser/examples/: manual_tool_exploration.py  openai.py  run_agent_task_cli.py
tool_use/tools/web_browser/examples/web_agents/: __init__.py  constants.py  pydantic_ai.py  simple_openai_agent.py
tool_use/tools/web_browser/pydoll_api_examples/: extract_page_text.py  page_screenshot.py
tools/: function_calling.py
utils/: __init__.py  func_defn_as_json_schema.py
utils/image/: __init__.py  prep_image_for_llm.py
