[project]
name = "llm-design-patterns"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Joseph Bolton", email = "joseph.jazz.bolton@gmail.com" }]
maintainers = [
  { name = "Joseph Bolton", email = "joseph.jazz.bolton@gmail.com" },
]
dependencies = [
    "loguru>=0.7.3",
    "openai>=1.82.0",
    "pydantic>=2.11.5",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
  "ipython>=9.2.0",
  "mypy>=1.15.0",
  "pylint>=3.3.7",
  "ruff>=0.11.11",
  "wat-inspector>=0.4.3",
]

[tool.uv.workspace]
members = [
  "memory",
  "rag",
  "structured_outputs",
  "tool_use",
  "mcp/custom_mcp_server", "memory/chatbot_memory_visualiser", "evals/using_pytest",
]
