[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chonkie>=1.0.10",
    "docling>=2.37.0",
    "lancedb>=0.24.0",
    "model2vec>=0.6.0",
    "pydantic>=2.11.5",
    "streamlit>=1.45.1",
    "tiktoken>=0.9.0",
]

[dependency-groups]
dev = [
    "ipython>=9.4.0",
]
