[project]
name = "chatbot-memory-visualiser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "httpx>=0.28.1",
    "lancedb>=0.24.1",
    "loguru>=0.7.3",
    "model2vec>=0.6.0",
    "networkx>=3.5",
    "openai>=1.92.3",
    "plotly>=6.3.0",
    "streamlit>=1.46.1",
]

[dependency-groups]
dev = [
    "ipython>=9.4.0",
    "pylint>=3.3.7",
    "ruff>=0.12.1",
]
